[gd_scene load_steps=7 format=3 uid="uid://bwop2iq8be4v0"]

[ext_resource type="Script" uid="uid://hstyri8kr0eo" path="res://GUI/settings_screen.gd" id="1_srqes"]
[ext_resource type="Texture2D" uid="uid://c328v6fpq215f" path="res://assets/backgroundmenu.png" id="2_assm4"]
[ext_resource type="FontFile" uid="uid://c8u4n25tng03p" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="3_n20dh"]
[ext_resource type="Theme" uid="uid://bh42wg05drqp6" path="res://GUI/Theme GUI/Ttles.tres" id="3_yo8wy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdo67"]
bg_color = Color(0.258824, 0.14902, 0.027451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.180392, 0.0901961, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_w4u50"]

[node name="settings_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srqes")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_assm4")
expand_mode = 1
stretch_mode = 5

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(700, 450)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152
anchor_top = 0.197
anchor_right = 0.881
anchor_bottom = 0.883
offset_left = -0.656616
offset_top = -27.787
offset_right = 0.66333
offset_bottom = 7.33301
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bdo67")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 369.0
offset_right = 1307.0
offset_bottom = 727.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_w4u50")
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_fonts/font = ExtResource("3_n20dh")
theme_override_font_sizes/font_size = 50
text = "Configuracion"
horizontal_alignment = 1

[node name="Separador1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
theme = ExtResource("3_yo8wy")
text = "Volumen
"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2

[node name="Separador2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ResolutionContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/ResolutionContainer"]
layout_mode = 2
theme = ExtResource("3_yo8wy")
text = "Resoluci√≥n
"
horizontal_alignment = 1

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/ResolutionContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1152x768"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="Seperador3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_yo8wy")
text = "Volver Al Menu"

[connection signal="value_changed" from="VBoxContainer/VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="VBoxContainer/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_selected"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
